# netbox-maintenance-device

./: .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  API_IMPLEMENTATION_SUMMARY.md  ATUALIZACAO_MENU.md  BADGE_STATUS.md  BOTOES_SCHEDULE_COMPLETE.md  CHANGELOG.md  COLLECTSTATIC_FIX.md  CONFIGURACAO_TRADUCAO.md  CORRECAO_COMPATIBILIDADE_ICONES.md  CORRECAO_CONTRASTE.md  CORRECAO_ERRO_METODO.md  CORRECOES_IMPLEMENTADAS.md  DEBUG_NOTIFICATIONS.md  DOCKER_INSTALL.md  DOCUMENTATION_INDEX.md  Dockerfile.override.example  IMPLEMENTACAO_FINAL.md  INSTALL_SUMMARY.md  INTERNATIONALIZATION_FIX.md  MANAGER_FIX.md  MANIFEST.in  PAGINA_ESTILIZADA.md  PUBLISH_GUIDE.md  README.md  RESUMO_TRADUCAO.md  SOLUCAO_MENU_CUSTOMIZADO.md  USAGE.md  VERSIONING_STRATEGY.md  bump_version.py  compile_po.py  configuration_example.py  django_i18n_config.py  docker-compose.override.yml.example  docker-install.sh  install.sh  plugin_requirements.txt  publish.ps1  pyproject.toml  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml  pyproject.toml  security.yml  test.yml
docs/: NOTIFICATIONS.md
netbox_maintenance_device/: __init__.py  admin.py  events.py  forms.py  jobs.py  models.py  navigation.py  signals.py  tables.py  tasks.py  template_content.py  urls.py  views.py
netbox_maintenance_device/api/: permissions.py  serializers.py  urls.py  views.py
netbox_maintenance_device/migrations/: 0001_initial.py  0002_cleanup_notifications.py  0002_maintenancenotification.py  0003_virtual_machine_and_calendar_schedule.py  0004_remove_maintenanceplan_last_executed_and_more.py
(+16 files in other folders)
